--- a/WhereToPlay/app/src/main/res/layout/fragment_deal_detail_list.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_deal_detail_list.xml
@@ -5,7 +5,7 @@
         android:id="@+id/rv_deal_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg">
+        android:background="@color/white">
 
     </android.support.v7.widget.RecyclerView>
 </layout>
