--- a/WhereToPlay/app/src/main/res/drawable/shape_discount_coupon_bottom.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_discount_coupon_bottom.xml
@@ -3,5 +3,5 @@
     <corners
         android:bottomLeftRadius="@dimen/radius_small"
         android:bottomRightRadius="@dimen/radius_small"/>
-    <solid android:color="@color/text_and_buttor_orange"/>
+    <solid android:color="@color/text_red"/>
 </shape>
