--- a/WhereToPlay/app/src/main/res/layout/activity_alter_city.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_alter_city.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white">
 
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_alter_city"
@@ -23,14 +24,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:afterTextChanged="@{editText.afterTextChanged}"
-            android:background="@color/signin_user_input"
+            android:background="@drawable/shape_city_choose_gray"
             android:drawableLeft="@drawable/search"
             android:drawablePadding="@dimen/padding_10"
             android:hint="@string/hint_alter_city"
-            android:padding="@dimen/padding_15"
-            android:textColor="@color/white"
+            android:padding="@dimen/padding_8"
+            android:textColor="@color/text_black"
             android:textColorHint="@color/hint_advice_feedback"
-            android:textSize="@dimen/normal_textsize"/>
+            android:textSize="@dimen/normal_textsize"
+            android:layout_marginTop="@dimen/margin_8"
+            android:layout_marginBottom="@dimen/margin_8"
+            android:layout_marginStart="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/margin_15"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_height"
+            android:background="@color/pay_reserve_list_divider_white"
+            />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -41,7 +52,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/margin_36"
-                android:background="@color/bg"
                 android:divider="@null"
                 android:dividerHeight="@dimen/height_0"/>
 
@@ -61,13 +71,13 @@
                 android:layout_width="@dimen/width_36"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:background="@color/pay_reserve_list_divider"/>
+                android:background="@color/white"/>
 
             <ListView
                 android:id="@+id/lv_alter_city_result"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/bg"
+                android:background="@color/white"
                 android:divider="@null"
                 android:dividerHeight="@dimen/height_0"
                 android:visibility="gone"/>
