--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -140,7 +140,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height_20"
                         android:gravity="center"
-                        android:text="@string/discover"
+                        android:text="@string/mine"
                         android:textColor="@color/reserve_unpress"
                         android:textSize="@dimen/textsize_10"/>
 
