--- a/WhereToPlay/app/src/main/res/layout/fragment_collection.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_collection.xml
@@ -15,6 +15,6 @@
             android:id="@+id/rv_collection"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg"/>
+            android:background="@color/white"/>
     </LinearLayout>
 </layout>
