--- a/WhereToPlay/app/src/main/res/layout/fragment_deal_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_deal_detail.xml
@@ -11,7 +11,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/bg_gray">
 
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_deal_detail"
@@ -26,7 +27,7 @@
             android:id="@+id/rg_deal_detail"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50"
-            android:background="@color/bg"
+            android:background="@color/white"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:onCheckedChanged="@{clcik.onCheckedChanged}"
@@ -87,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/line_height"
             android:layout_marginBottom="@dimen/margin_minus_1"
-            android:background="@color/pay_reserve_list_divider"
+            android:background="@color/pay_reserve_list_divider_white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rg_deal_detail"/>
