--- a/WhereToPlay/app/src/main/res/layout/fragment_message_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_message_detail.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <com.fanc.wheretoplay.view.TopMenu
@@ -26,7 +26,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/margin_15"
             android:text="@{detail.title}"
-            android:textColor="@color/pay_reserve_list_text"
+            android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_level3"/>
 
         <ImageView
