--- a/WhereToPlay/app/src/main/res/layout/fragment_pay.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_pay.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/rv_pay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/bg"/>
+                android:background="@color/white"/>
 
             <include layout="@layout/load_more"/>
         </com.fanc.wheretoplay.view.PullToRefreshLayout>
