--- a/WhereToPlay/app/src/main/res/layout/item_city_hot.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_city_hot.xml
@@ -8,16 +8,21 @@
               android:paddingLeft="@dimen/padding_15"
               android:paddingRight="@dimen/padding_15"
               tools:ignore="RtlHardcoded">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_height"
+        android:background="@color/pay_reserve_list_divider_white"
+        android:layout_marginTop="@dimen/margin_10"/>
 
     <TextView
         android:id="@+id/tv_item_city_hot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_5"
-        android:layout_marginTop="@dimen/margin_5"
+        android:layout_marginBottom="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_15"
         android:clickable="false"
         android:text="@string/hot_city"
-        android:textColor="@color/pay_reserve_list_text"
+        android:textColor="@color/text_black"
         android:textSize="@dimen/normal_textsize"/>
 
     <com.fanc.wheretoplay.view.WrapHeightGridView
@@ -30,4 +35,21 @@
         android:numColumns="3"
         android:scrollbars="none"
         android:verticalSpacing="@dimen/padding_10"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_height"
+        android:background="@color/pay_reserve_list_divider_white"
+        android:layout_marginTop="@dimen/margin_15"
+        android:layout_marginBottom="@dimen/margin_15"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_5"
+        android:clickable="false"
+        android:text="@string/all_city"
+        android:textColor="@color/text_black"
+        android:textSize="@dimen/normal_textsize"/>
 </LinearLayout>
