--- a/WhereToPlay/app/src/main/res/layout/item_city_local.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_city_local.xml
@@ -12,11 +12,11 @@
         android:id="@+id/tv_item_city_current"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_5"
-        android:layout_marginTop="@dimen/margin_5"
+        android:layout_marginBottom="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_15"
         android:clickable="false"
         android:text="@string/current_city"
-        android:textColor="@color/pay_reserve_list_text"
+        android:textColor="@color/text_black"
         android:textSize="@dimen/normal_textsize"/>
 
     <TextView
