--- a/WhereToPlay/app/src/main/res/layout/item_city_search_result.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_city_search_result.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="@dimen/margin_16"
             android:gravity="center_vertical"
             android:text="@{city.name}"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_level2"/>
 
         <View
@@ -28,6 +28,6 @@
             android:layout_height="@dimen/line_height_1px"
             android:layout_marginLeft="@dimen/margin_16"
             android:layout_marginRight="@dimen/margin_16"
-            android:background="@color/down_payment_divider"/>
+            android:background="@color/pay_reserve_list_divider_white"/>
     </LinearLayout>
 </layout>
