--- a/WhereToPlay/app/src/main/res/layout/item_discover.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_discover.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_15"
             android:layout_toRightOf="@+id/iv_discover_item"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textSize="@dimen/normal_textsize"/>
 
         <TextView
