--- a/WhereToPlay/app/src/main/res/layout/item_message.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_message.xml
@@ -44,7 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{message.title}"
-                    android:textColor="@color/white"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -67,7 +67,7 @@
             android:layout_width="@dimen/width_100"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin_5"
-            android:background="@color/red"
+            android:background="@color/text_red"
             android:text="@string/delete"
             android:textColor="@color/white"
             android:textSize="@dimen/normal_textsize"/>
