--- a/WhereToPlay/app/src/main/res/layout/load_more.xml
+++ b/WhereToPlay/app/src/main/res/layout/load_more.xml
@@ -19,10 +19,11 @@
 
             <ImageView
                 android:id="@+id/pullup_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/width_18"
+                android:layout_height="@dimen/height_30"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="60dp"
+                android:layout_marginEnd="@dimen/margin_8"
+                android:layout_toStartOf="@+id/loadstate_tv"
                 android:background="@drawable/pullup_icon_big" />
 
             <ImageView
@@ -30,7 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="60dp"
+                android:layout_marginEnd="@dimen/margin_8"
+                android:layout_toStartOf="@+id/loadstate_tv"
                 android:background="@drawable/loading"
                 android:visibility="gone" />
 
