大部分ui界面风格改完，准备改预订界面

--- a/WhereToPlay/app/src/main/res/drawable/shape_reserve_list_item_bottom.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_reserve_list_item_bottom.xml
@@ -3,5 +3,5 @@
     <corners
         android:bottomRightRadius="@dimen/radius_small"
         android:bottomLeftRadius="@dimen/radius_small"/>
-    <solid android:color="@color/signin_user_input"/>
+    <solid android:color="@color/pay_reserve_list_divider_white"/>
 </shape>
