--- a/WhereToPlay/app/src/main/res/drawable/shape_invitaiton_code.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_invitaiton_code.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="@dimen/line_height"
-        android:color="@color/text_and_buttor_orange"
+        android:color="@color/text_red"
         android:dashGap="@dimen/padding_3"
         android:dashWidth="@dimen/padding_2"/>
-    <solid android:color="@color/invitation_code_bg"/>
+    <solid android:color="@color/pay_reserve_list_divider_white"/>
 </shape>
