--- a/WhereToPlay/app/src/main/res/layout/fragment_about_us.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_about_us.xml
@@ -4,7 +4,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/bg_gray"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
