--- a/WhereToPlay/app/src/main/res/layout/fragment_advice_feedback.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_advice_feedback.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <com.fanc.wheretoplay.view.TopMenu
@@ -23,13 +23,13 @@
             android:id="@+id/et_advice_feedback_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/signin_user_input"
+            android:background="@color/bg_gray"
             android:gravity="center_vertical"
             android:hint="@string/hint_advice_title"
             android:paddingBottom="@dimen/padding_15"
             android:paddingLeft="@dimen/padding_15"
             android:paddingTop="@dimen/padding_15"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textColorHint="@color/hint_advice_feedback"
             android:textSize="@dimen/normal_textsize"/>
 
@@ -38,11 +38,11 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_180"
             android:layout_marginTop="@dimen/margin_15"
-            android:background="@color/signin_user_input"
+            android:background="@color/bg_gray"
             android:gravity="top"
             android:hint="@string/hint_leave_words"
             android:padding="@dimen/padding_15"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black"
             android:textColorHint="@color/hint_advice_feedback"
             android:textSize="@dimen/normal_textsize"/>
 
@@ -68,7 +68,7 @@
             android:background="@drawable/shape_btn_signin"
             android:onClick="@{click.onViewClick}"
             android:text="@string/submit"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_white"
             android:textSize="@dimen/textsize_level2"/>
 
     </LinearLayout>
