--- a/WhereToPlay/app/src/main/res/layout/fragment_collection.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_collection.xml
@@ -4,7 +4,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/bg_gray">
 
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_collection"
