--- a/WhereToPlay/app/src/main/res/layout/fragment_integral.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_integral.xml
@@ -4,7 +4,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <com.fanc.wheretoplay.view.TopMenu
@@ -27,14 +27,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_10"
             android:text="0"
-            android:textColor="@color/white"
+            android:textColor="@color/text_red"
             android:textSize="@dimen/textsize_level2"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_20"
-            android:background="@color/pay_reserve_list_divider"
+            android:background="@color/pay_reserve_list_divider_white"
             android:paddingBottom="@dimen/padding_5"
             android:paddingLeft="@dimen/padding_15"
             android:paddingTop="@dimen/padding_5"
