--- a/WhereToPlay/app/src/main/res/layout/fragment_set_pay_pwd.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_set_pay_pwd.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/white"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -54,7 +54,7 @@
                 app:passwordColor="@color/pay_reserve_list_text"
                 app:passwordLength="6"
                 app:passwordWidth="@dimen/margin_5"
-                app:solidColor="@color/bg"/>
+                app:solidColor="@color/bg_gray"/>
         </RelativeLayout>
 
         <Button
@@ -67,7 +67,7 @@
             android:background="@drawable/shape_btn_signin"
             android:onClick="@{click.onViewClick}"
             android:text="@string/next"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_white"
             android:textSize="@dimen/textsize_level2"/>
     </LinearLayout>
 </layout>
