--- a/WhereToPlay/app/src/main/res/layout/item_collection.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_collection.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/white">
 
         <CheckBox
             android:id="@+id/cb_collection_item_status"
@@ -26,7 +27,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/bg"
+            android:background="@color/white"
             android:padding="@dimen/padding_15">
 
             <ImageView
@@ -44,7 +45,7 @@
                 android:layout_marginLeft="@dimen/margin_15"
                 android:layout_toRightOf="@+id/iv_item_collection"
                 android:text="@{collection.name}"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/textsize_level3"/>
 
             <TextView
@@ -55,7 +56,7 @@
                 android:layout_below="@+id/tv_item_collection_title"
                 android:layout_marginTop="@dimen/margin_10"
                 android:text='@{collection.decorate+", "+collection.grade}'
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/normal_textsize"/>
 
             <TextView
@@ -66,7 +67,7 @@
                 android:layout_below="@+id/tv_item_collection_decorate"
                 android:layout_marginTop="@dimen/margin_15"
                 android:text="@{collection.district}"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/normal_textsize"/>
 
             <TextView
@@ -77,7 +78,7 @@
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@+id/tv_item_collection_area"
                 android:text='@{!"-1".equals(collection.distance)?(Integer.parseInt(collection.distance)>1000?Float.parseFloat(collection.distance)/1000+"km":(collection.distance+"m")):""}'
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/normal_textsize"/>
 
             <TextView
@@ -87,7 +88,7 @@
                 android:layout_alignBottom="@+id/tv_item_collection_area"
                 android:layout_alignParentRight="true"
                 android:text="@string/rise"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/text_red"
                 android:textSize="@dimen/textsize_levelsmall"/>
 
             <TextView
@@ -97,7 +98,7 @@
                 android:layout_alignBottom="@+id/tv_item_collection_area"
                 android:layout_toLeftOf="@+id/tv_item_collection_rise"
                 android:text='@{collection.min_price+@string/currency}'
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/text_red"
                 android:textSize="@dimen/normal_textsize"/>
 
         </RelativeLayout>
