准备改评价页面

--- a/WhereToPlay/app/src/main/res/layout/item_date.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_date.xml
@@ -15,7 +15,7 @@
         android:id="@+id/ll_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/my_bg"
+        android:background="@color/text_red"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
