--- a/WhereToPlay/app/src/main/res/drawable/shape_date_time_unselected.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_date_time_unselected.xml
@@ -3,5 +3,5 @@
     <corners android:radius="@dimen/radius_2"/>
     <stroke
         android:width="@dimen/line_width"
-        android:color="@color/orange_border"/>
+        android:color="@color/text_red"/>
 </shape>
