--- a/WhereToPlay/app/src/main/res/layout/fragment_date.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_date.xml
@@ -4,7 +4,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/bg_gray"
         android:orientation="vertical">
 
         <com.fanc.wheretoplay.view.TopMenu
@@ -15,7 +15,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/reserve_info_title"
+            android:background="@color/white"
             android:padding="@dimen/padding_10">
 
             <TextView
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9月"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/textsize_level4"/>
 
             <TextView
@@ -33,7 +33,7 @@
                 android:layout_alignBottom="@+id/tv_date_month"
                 android:layout_toRightOf="@+id/tv_date_month"
                 android:text="2017"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/normal_textsize"/>
 
             <TextView
@@ -43,7 +43,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:text="@string/reserve_date_rang"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/normal_textsize"/>
         </RelativeLayout>
 
@@ -56,7 +56,7 @@
             android:id="@+id/gv_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/reserve_info_title"
+            android:background="@color/white"
             android:horizontalSpacing="@dimen/padding_10"
             android:numColumns="5"
             android:paddingBottom="@dimen/padding_10"
@@ -74,7 +74,7 @@
             android:layout_marginTop="@dimen/margin_30"
             android:background="@drawable/shape_btn_signin"
             android:text="@string/confirm"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_white"
             android:textSize="@dimen/textsize_level2"/>
     </LinearLayout>
 </layout>
