--- a/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_reserve_info.xml
@@ -28,7 +28,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg">
+            android:background="@color/bg_gray">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                         android:background="@drawable/discount"
                         android:paddingLeft="@dimen/padding_20"
                         android:paddingRight="@dimen/padding_10"
-                        android:textColor="@color/text_black"
+                        android:textColor="@color/text_white"
                         android:textSize="@dimen/textsize_level3"/>
 
                     <TextView
@@ -178,7 +178,7 @@
                     android:layout_marginLeft="@dimen/margin_15"
                     android:gravity="center_vertical"
                     android:text="@string/name"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rg_reserve_info"/>
@@ -192,7 +192,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/hint_name"
                     android:maxLength="30"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textColorHint="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -203,7 +203,7 @@
                     android:id="@+id/view2"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
-                    android:background="@color/down_payment_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -218,7 +218,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/cellphone"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_name"/>
@@ -232,7 +232,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/hint_mobile"
                     android:maxLength="11"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textColorHint="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -242,7 +242,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/margin_5"
-                    android:background="@color/discover_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_mobile"/>
@@ -255,7 +255,7 @@
                     android:layout_marginTop="@dimen/margin_5"
                     android:gravity="center_vertical"
                     android:text="@string/choose_room_category"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_mobile"/>
@@ -268,7 +268,7 @@
                     android:gravity="center_vertical"
                     android:onClick="@{click.onViewClick}"
                     android:text="@string/please_choose_room_type"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toStartOf="@+id/iv_reserve_info_right"
                     app:layout_constraintStart_toEndOf="@+id/tv_reserve_info_room_category"
@@ -287,7 +287,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
-                    android:background="@color/down_payment_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_room_category"/>
@@ -296,7 +296,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
-                    android:background="@color/down_payment_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rg_reserve_info"/>
@@ -310,7 +310,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/arrive_time"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_room_category"/>
@@ -323,7 +323,7 @@
                     android:gravity="center_vertical"
                     android:onClick="@{click.onViewClick}"
                     android:text="@string/please_choose_arrive_time"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toStartOf="@+id/iv_reserve_info_date"
                     app:layout_constraintStart_toEndOf="@+id/tv_reserve_info_reserve_time"
@@ -343,7 +343,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/margin_5"
-                    android:background="@color/discover_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_reserve_time"/>
@@ -356,7 +356,7 @@
                     android:layout_marginTop="@dimen/margin_5"
                     android:gravity="center_vertical"
                     android:text="@string/waiter"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_reserve_time"/>
@@ -369,7 +369,7 @@
                     android:gravity="center_vertical"
                     android:onClick="@{click.onViewClick}"
                     android:text="@string/please_choose"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/et_reserve_info_name"
@@ -378,7 +378,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
-                    android:background="@color/down_payment_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_waiter"/>
@@ -392,7 +392,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/carport"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_waiter"/>
@@ -407,7 +407,7 @@
                     android:hint="@string/hint_carport"
                     android:inputType="number"
                     android:maxLength="1"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textColorHint="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toEndOf="@+id/tv_reserve_info_carport"
@@ -416,7 +416,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
-                    android:background="@color/down_payment_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_carport"/>
@@ -429,7 +429,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/number_of_people"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintLeft_toRightOf="@+id/et_reserve_info_carport"
                     app:layout_constraintRight_toLeftOf="@+id/et_reserve_info_number_of_people"
@@ -446,7 +446,7 @@
                     android:inputType="number"
                     android:maxLength="3"
                     android:text="1"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textColorHint="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -456,7 +456,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/line_height"
-                    android:background="@color/down_payment_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_number_of_people"/>
@@ -469,7 +469,7 @@
                     android:layout_marginTop="@dimen/margin_1"
                     android:gravity="center_vertical"
                     android:text="@string/remark"
-                    android:textColor="@color/text_and_buttor_orange"
+                    android:textColor="@color/text_red"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_reserve_info_number_of_people"/>
@@ -483,7 +483,7 @@
                     android:gravity="center_vertical"
                     android:hint="@string/hint_input"
                     android:maxLength="500"
-                    android:textColor="@color/text_detail_white_bc"
+                    android:textColor="@color/text_black"
                     android:textColorHint="@color/text_detail_white_bc"
                     android:textSize="@dimen/normal_textsize"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -493,7 +493,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/margin_5"
-                    android:background="@color/discover_divider"
+                    android:background="@color/pay_reserve_list_divider_white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_reserve_info_remark"/>
@@ -510,6 +510,7 @@
                     android:onClick="@{click.onViewClick}"
                     android:text="@string/submit_reserve_info"
                     android:textSize="@dimen/textsize_level2"
+                    android:textColor="@color/text_white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
