--- a/WhereToPlay/app/src/main/res/layout/fragment_reset_pwd.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_reset_pwd.xml
@@ -12,7 +12,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg">
+        android:background="@color/bg_gray">
 
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_reset_pwd"
@@ -29,7 +29,7 @@
             android:layout_marginLeft="@dimen/margin_20"
             android:layout_marginRight="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_30"
-            android:background="@drawable/shape_signin_user_input"
+            android:background="@drawable/shape_pay"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tm_reset_pwd">
@@ -41,7 +41,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/mobile"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textSize="@dimen/normal_textsize"/>
 
             <EditText
@@ -53,7 +53,7 @@
                 android:background="@null"
                 android:hint="@string/hint_mobile"
                 android:inputType="phone"
-                android:textColor="@color/white"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textColorHint="@color/text_hint"
                 android:textSize="@dimen/normal_textsize"/>
 
@@ -65,7 +65,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/password"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textSize="@dimen/normal_textsize"/>
 
             <EditText
@@ -77,7 +77,7 @@
                 android:background="@null"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
-                android:textColor="@color/white"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textColorHint="@color/text_hint"
                 android:textSize="@dimen/normal_textsize"/>
 
@@ -89,7 +89,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/verification"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textSize="@dimen/normal_textsize"/>
 
             <EditText
@@ -101,7 +101,7 @@
                 android:layout_toRightOf="@+id/tv_reset_pwd_verification"
                 android:background="@null"
                 android:hint="@string/hint_verification"
-                android:textColor="@color/white"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textColorHint="@color/text_hint"
                 android:textSize="@dimen/normal_textsize"/>
 
@@ -116,20 +116,20 @@
                 android:background="@drawable/shape_btn_verification"
                 android:onClick="@{click.onBtnClick}"
                 android:text="@string/get_verification"
-                android:textColor="@color/text_black"
+                android:textColor="@color/text_white"
                 android:textSize="@dimen/normal_textsize"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height_1px"
                 android:layout_below="@+id/tv_reset_pwd_mobile"
-                android:background="@color/signin_line_divider"/>
+                android:background="@color/pay_reserve_list_divider_white"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height_1px"
                 android:layout_below="@+id/tv_reset_pwd_password"
-                android:background="@color/signin_line_divider"/>
+                android:background="@color/pay_reserve_list_divider_white"/>
         </RelativeLayout>
 
         <Button
@@ -140,7 +140,7 @@
             android:background="@drawable/shape_btn_signin"
             android:onClick="@{click.onBtnClick}"
             android:text="@string/submit"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_white"
             android:textSize="@dimen/textsize_level2"
             app:layout_constraintEnd_toEndOf="@+id/rl_reset_pwd_user_input"
             app:layout_constraintStart_toStartOf="@+id/rl_reset_pwd_user_input"
