--- a/WhereToPlay/app/src/main/res/layout/fragment_signin.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_signin.xml
@@ -12,18 +12,17 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/bg_gray"
         android:paddingTop="@dimen/statubar_height">
 
         <ImageView
             android:id="@+id/iv_signin"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/height_150"
             android:layout_marginTop="@dimen/statubar_height"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:src="@drawable/sign_in_top"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -34,7 +33,7 @@
             android:layout_marginLeft="@dimen/margin_20"
             android:layout_marginRight="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_40"
-            android:background="@drawable/shape_signin_user_input"
+            android:background="@drawable/shape_pay"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_signin">
@@ -46,7 +45,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/mobile"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/text_black"
                 android:textSize="@dimen/normal_textsize"/>
 
             <EditText
@@ -57,7 +56,7 @@
                 android:background="@null"
                 android:hint="@string/hint_mobile"
                 android:inputType="phone"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textColorHint="@color/text_hint"
                 android:textSize="@dimen/normal_textsize"/>
 
@@ -69,7 +68,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/password"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textSize="@dimen/normal_textsize"/>
 
             <EditText
@@ -81,7 +80,7 @@
                 android:background="@null"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
-                android:textColor="@color/white"
+                android:textColor="@color/shape_reserve_top_bg"
                 android:textColorHint="@color/text_hint"
                 android:textSize="@dimen/normal_textsize"/>
 
@@ -89,7 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height_1px"
                 android:layout_below="@+id/tv_signin_mobile"
-                android:background="@color/signin_line_divider"/>
+                android:background="@color/pay_reserve_list_divider_white"/>
 
         </RelativeLayout>
 
@@ -101,7 +100,7 @@
             android:layout_marginTop="@dimen/margin_15"
             android:onClick="@{doClick.doClick}"
             android:text="@string/forget_password"
-            android:textColor="@color/text_forget_pwd_and_register"
+            android:textColor="@color/shape_reserve_top_bg"
             android:textSize="@dimen/textsize_levelsmall"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
@@ -113,7 +112,7 @@
             android:layout_marginRight="@dimen/margin_35"
             android:onClick="@{doClick.doClick}"
             android:text="@string/mobile_register"
-            android:textColor="@color/text_forget_pwd_and_register"
+            android:textColor="@color/shape_reserve_top_bg"
             android:textSize="@dimen/textsize_levelsmall"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_signin_forget_pwd"/>
@@ -127,7 +126,7 @@
             android:focusable="true"
             android:onClick="@{doClick.doClick}"
             android:text="@string/signin"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_white"
             android:textSize="@dimen/textsize_level2"
             app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
             app:layout_constraintHorizontal_bias="0.0"
