--- a/WhereToPlay/app/src/main/res/layout/fragment_waiter_info.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_waiter_info.xml
@@ -4,7 +4,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/bg_gray">
 
         <com.fanc.wheretoplay.view.TopMenu
             android:id="@+id/tm_waiter_info"
@@ -28,7 +29,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="@dimen/line_height"
-            android:background="@color/signin_line_divider"/>
+            android:background="@color/pay_reserve_list_divider_white"/>
 
         <TextView
             android:id="@+id/tv_waiter_info_explain"
