--- a/WhereToPlay/app/src/main/res/layout/orderlistallfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/orderlistallfragment.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <Button
+        android:layout_width="match_parent"
+        android:id="@+id/bt_comments_four"
+        android:layout_height="wrap_content" />
     <com.fanc.wheretoplay.view.PullToRefreshLayout
         android:id="@+id/ptrl_pay_reserve"
         android:layout_width="match_parent"
