--- a/WhereToPlay/app/src/main/res/layout/titlebarview.xml
+++ b/WhereToPlay/app/src/main/res/layout/titlebarview.xml
@@ -4,12 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/menu_height"
     android:background="@color/title_bar">
-
+    <View
+        android:id="@+id/v_statubar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/statubar_height"/>
 
     <ImageView
         android:id="@+id/menu_iv_lefticon"
         android:layout_width="@dimen/menu_height"
         android:layout_height="@dimen/menu_height"
+        android:layout_below="@+id/v_statubar"
         android:layout_centerVertical="true"
         android:scaleType="center"
         android:src="@drawable/left"
@@ -18,7 +22,9 @@
 
     <TextView
         android:textColor="#FFFFFF"
-        android:text="1212"
+        android:text=""
+        android:textSize="@dimen/menu_text_size"
+        android:layout_below="@+id/v_statubar"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:id="@+id/tv_title"
